Generamos el login y aplicamos la generacion del token con jwt

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=8080
 MONGODB_ATLAS=mongodb://user_node_cafe:NocS65l9MZWQSvoL@cloustercurso-shard-00-00.jafti.mongodb.net:27017,cloustercurso-shard-00-01.jafti.mongodb.net:27017,cloustercurso-shard-00-02.jafti.mongodb.net:27017/test?replicaSet=atlas-h6o4gv-shard-0&ssl=true&authSource=admin
-
+SECRETORPRIVATEKEY=3st3esMyprivate_key@123#$&/||
 USER=user_node_cafe
 PASS=NocS65l9MZWQSvoL
