Goggle signIn finalizado

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ MONGODB_ATLAS=mongodb://user_node_cafe:NocS65l9MZWQSvoL@cloustercurso-shard-00-0
 SECRETORPRIVATEKEY=3st3esMyprivate_key@123#$&/||
 USER=user_node_cafe
 PASS=NocS65l9MZWQSvoL
+
+GOOGLE_SIGN_IN=965177956463-658k64p74c9lkruhu6roa0h6a1n99upo.apps.googleusercontent.com
+GOOGLE_SECRET_ID=xfRmBR9YW7zXabOPOp2iUKvf
